# AdaptiveHaskell

./: Adaptive.cabal  Adaptive.lkshs
src/: Adaptive.hs  Main.hs
